# VidGenX

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
core/: CMakeLists.txt
core/src/: config.cpp  config.h  consts.cpp  consts.h  controller.cpp  controller.h  factory.cpp  factory.h  main.cpp  objects.cpp  objects.h  parser_entities.h  prototypes.cpp  prototypes.h  scene.cpp  scene.h  vdlang.l  vdlang.y
core/src/entities/: animate.cpp  animate.h  builtin_animatons.h  circle.cpp  circle.h  composite.cpp  composite.h  rectangle.cpp  rectangle.h  shared.cpp  shared.h  wait.cpp  wait.h
sample/: vidgenx.ini
sample/01_simple/: simple.vdef
