CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_CXX_STANDARD 20)

SET(PARSER_DIR "${CMAKE_CURRENT_BINARY_DIR}")

FIND_PACKAGE(FLEX 2.6 REQUIRED)
FIND_PACKAGE(BISON 2.7 REQUIRED)

SET(APP_DIR "${CMAKE_CURRENT_LIST_DIR}")
SET(BLEND2D_DIR "${APP_DIR}/../third_party/blend2d")
SET(BLEND2D_STATIC TRUE)
INCLUDE("${BLEND2D_DIR}/CMakeLists.txt")

SET(SRC_DIR src)
SET(LEXER_OUT "${PARSER_DIR}/lexer.cpp")
SET(PARSER_OUT "${PARSER_DIR}/parser.cpp")

FLEX_TARGET(LEXER "${SRC_DIR}/vdlang.l" "${LEXER_OUT}" DEFINES_FILE "${PARSER_DIR}/vdlang_lex.h" COMPILE_FLAGS "--wincompat")
BISON_TARGET(PARSER "${SRC_DIR}/vdlang.y" "${PARSER_OUT}" DEFINES_FILE "${PARSER_DIR}/vdlang_parser.h")
ADD_FLEX_BISON_DEPENDENCY(LEXER PARSER)

FILE(GLOB_RECURSE src src/*.cpp src/*.hpp src/*.h src/*.c src/*.l src/*.y)

INCLUDE_DIRECTORIES(src)

ADD_EXECUTABLE(VidGenX ${src} "${SRC_DIR}/vdlang.y" "${LEXER_OUT}" "${PARSER_OUT}")

TARGET_LINK_LIBRARIES(VidGenX ${SDL2_LIBRARIES} Blend2D::Blend2D)
TARGET_INCLUDE_DIRECTORIES(VidGenX PRIVATE "${PARSER_DIR}")
